--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^3.39.0",
     "firebase": "^9.20.0",
     "vue": "^3.2.47",
     "vue-meta": "^2.4.0",
     "vue-router": "^4.1.6",
+    "vue3-apexcharts": "^1.4.1",
+    "vue3-count-to": "^1.1.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
